test/error/LexCommentMultiLineUnterminated.fu
/*
//ERROR: Unterminated multi-line comment, started in line 1